--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@ td { padding:8px; text-align:center; }
 #loginArea button { padding: 8px 12px; font-size: 13px; border-radius:6px; }
 #userInfo { font-size:12px; color:#fff; text-align:center; }
 
+/* 탭 스타일 */
 .tab { display:flex; justify-content:center; gap:10px; margin-bottom:20px; }
 .tab button { padding:10px 20px; border:none; border-radius:8px; cursor:pointer; background:#333; color:white; font-weight:bold; }
 .tab button.active { background:#FFD700; color:black; }
 
+/* 탭 컨텐츠 숨기기 */
 .tabContent { display:none; }
 .tabContent.active { display:block; }
 
+/* 3대 총합 강조 */
 #total3 { font-size:28px; font-weight:bold; margin-bottom:15px; color:#FFD700; }
 input.rmInput { width:80px; font-size:16px; text-align:center; }
 </style>
@@ -58,6 +61,7 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
     <h2>조현성을 위한 1RM 계산기 + 3대 기록표</h2>
 
+    <!-- 탭 -->
     <div class="tab">
         <button class="tabBtn active" data-target="tab1">1RM 계산기</button>
         <button class="tabBtn" data-target="tab2">3대 기록표</button>
@@ -70,6 +74,7 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
         <button onclick="calculate1RM()">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
+        <button id="saveBtn" style="display:none;">기록 저장</button>
         <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
     </div>
 
@@ -88,6 +93,7 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
     </div>
 </div>
 
+<!-- 로그인 영역 -->
 <div id="loginArea">
     <button id="googleLoginBtn">Google 로그인</button>
     <button id="logoutBtn" style="display:none;">로그아웃</button>
@@ -111,9 +117,11 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db = firebase.firestore();
 
+// 요소
 const googleLoginBtn = document.getElementById("googleLoginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const userInfo = document.getElementById("userInfo");
+const saveBtn = document.getElementById("saveBtn");
 const save3Btn = document.getElementById("save3Btn");
 
 // 무게 옵션
@@ -142,6 +150,7 @@ function calculate1RM(){
     const oneRM = weight*(1+reps*0.0333);
     document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
 
+    // 세로 표로 수정
     let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
     for(let r=1;r<=10;r++){
         let rmWeight = oneRM/(1+(r-1)*0.0333);
@@ -151,6 +160,7 @@ function calculate1RM(){
     document.getElementById("tableArea").innerHTML = html;
 }
 
+
 // Google 로그인
 googleLoginBtn.onclick = () => {
     const provider = new firebase.auth.GoogleAuthProvider();
@@ -158,6 +168,8 @@ googleLoginBtn.onclick = () => {
         .then(result => console.log("로그인 성공:", result.user))
         .catch(error => alert("로그인 실패: " + error.message));
 };
+
+// 로그아웃
 logoutBtn.onclick = () => auth.signOut().then(()=>console.log("로그아웃 완료"));
 
 // 로그인 상태 확인
@@ -165,18 +177,51 @@ auth.onAuthStateChanged(user=>{
     if(user){
         googleLoginBtn.style.display="none";
         logoutBtn.style.display="block";
+        saveBtn.style.display="block";
         save3Btn.style.display="block";
         userInfo.textContent = `${user.displayName} 님`;
 
+        loadLastRecord();
         loadLast3Record();
     }else{
         googleLoginBtn.style.display="block";
         logoutBtn.style.display="none";
+        saveBtn.style.display="none";
         save3Btn.style.display="none";
         userInfo.textContent="";
+        document.getElementById("saveResult").textContent="";
         document.getElementById("save3Result").textContent="";
     }
 });
+
+// 기록 저장 1RM 계산기
+saveBtn.onclick = async ()=>{
+    const user = auth.currentUser;
+    if(!user) return;
+    const weight = weightSelect.value;
+    const reps = repsSelect.value;
+    if(!weight || !reps){ alert("무게와 반복수를 선택하세요!"); return; }
+    try{
+        await db.collection("users").doc(user.uid).set({
+            weight, reps, savedAt:new Date()
+        });
+        document.getElementById("saveResult").textContent="기록 저장 완료!";
+    }catch(error){ console.error(error); alert("저장 실패: "+error.message);}
+};
+
+// 마지막 기록 불러오기 1RM
+async function loadLastRecord(){
+    const user = auth.currentUser;
+    if(!user) return;
+    try{
+        const doc = await db.collection("users").doc(user.uid).get();
+        if(doc.exists){
+            const data = doc.data();
+            document.getElementById("saveResult").textContent=
+                `마지막 기록: ${data.weight}kg / ${data.reps}회`;
+        }
+    }catch(error){ console.error(error);}
+}
 
 // 3대 기록 저장
 save3Btn.onclick = async ()=>{
