--- a/index.html
+++ b/index.html
@@ -1,295 +1,26 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1RM 계산기 + 3대 기록표</title>
-<style>
-body {
-    background: black;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-    text-align: center;
-    padding: 70px 20px 20px 20px;
-}
-.container { max-width: 400px; margin: auto; }
+on:
+  push:
+    branches:
+      - main  # main 브랜치에 푸시되면 자동 배포
 
-.subtitle { font-size:16px; margin-bottom: 20px; }
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-select, button {
-    width:100%; padding:14px; margin:10px 0; font-size:18px;
-    border-radius:10px; border:none; text-align:center;
-}
-button { font-size:20px; background:white; color:black; font-weight:bold; }
-#result { margin-top:20px; font-size:22px; }
-table { width:100%; margin-top:15px; border-collapse: collapse; }
-table, td { border:1px solid white; }
-td { padding:8px; text-align:center; }
+    steps:
+      # 1. 코드 체크아웃
+      - uses: actions/checkout@v3
 
-#loginArea {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    padding: 8px;
-    background: rgba(0,0,0,0.5);
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-}
-#loginArea button { padding: 8px 12px; font-size: 13px; border-radius:6px; }
-#userInfo { font-size:12px; color:#fff; text-align:center; }
+      # 2. GitHub Pages 구성
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v3
 
-/* 탭 스타일 */
-.tab { display:flex; justify-content:center; gap:10px; margin-bottom:20px; }
-.tab button { padding:10px 20px; border:none; border-radius:8px; cursor:pointer; background:#333; color:white; font-weight:bold; }
-.tab button.active { background:#FFD700; color:black; }
+      # 3. 프로젝트 루트 업로드 (index.html 포함)
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './'
 
-/* 탭 컨텐츠 숨기기 */
-.tabContent { display:none; }
-.tabContent.active { display:block; }
-
-/* 3대 총합 강조 */
-#total3 { font-size:28px; font-weight:bold; margin-bottom:15px; color:#FFD700; }
-input.rmInput { width:80px; font-size:16px; text-align:center; }
-</style>
-</head>
-<body>
-
-<div class="container">
-    <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
-    <h2>조현성을 위한 1RM 계산기 + 3대 기록표</h2>
-
-    <!-- 탭 -->
-    <div class="tab">
-        <button class="tabBtn active" data-target="tab1">1RM 계산기</button>
-        <button class="tabBtn" data-target="tab2">3대 기록표</button>
-    </div>
-
-    <!-- 1RM 계산기 -->
-    <div id="tab1" class="tabContent active">
-        <select id="weight"><option value="">무게 선택</option></select>
-        <select id="reps"><option value="">반복수 선택</option></select>
-        <button onclick="calculate1RM()">GO</button>
-        <div id="result"></div>
-        <div id="tableArea"></div>
-        <button id="saveBtn" style="display:none;">기록 저장</button>
-        <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
-    </div>
-
-    <!-- 3대 기록표 -->
-    <div id="tab2" class="tabContent">
-        <div id="total3">3대: 0 kg</div>
-        <table>
-            <tr>
-                <td><input type="number" id="benchRM" class="rmInput" placeholder="벤치" min="0"></td>
-                <td><input type="number" id="squatRM" class="rmInput" placeholder="스쿼트" min="0"></td>
-                <td><input type="number" id="deadRM" class="rmInput" placeholder="데드" min="0"></td>
-            </tr>
-        </table>
-        <button id="save3Btn" style="display:none; margin-top:10px;">3대 기록 저장</button>
-        <div id="save3Result" style="margin-top:10px; font-size:16px;"></div>
-    </div>
-</div>
-
-<!-- 로그인 영역 -->
-<div id="loginArea">
-    <button id="googleLoginBtn">Google 로그인</button>
-    <button id="logoutBtn" style="display:none;">로그아웃</button>
-    <div id="userInfo"></div>
-</div>
-
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
-<script>
-const firebaseConfig = {
-    apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
-    authDomain: "rmpj-7ca13.firebaseapp.com",
-    projectId: "rmpj-7ca13",
-    storageBucket: "rmpj-7ca13.firebasestorage.app",
-    messagingSenderId: "983484366324",
-    appId: "1:983484366324:web:5fd58faba825ee39decda1"
-};
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
-
-// 요소
-const googleLoginBtn = document.getElementById("googleLoginBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const userInfo = document.getElementById("userInfo");
-const saveBtn = document.getElementById("saveBtn");
-const save3Btn = document.getElementById("save3Btn");
-
-// 무게 옵션
-const weightSelect = document.getElementById("weight");
-for (let w=0; w<=250; w+=5){
-    let option = document.createElement("option");
-    option.value = w; option.textContent = w+" kg";
-    weightSelect.appendChild(option);
-}
-// 반복수 옵션
-const repsSelect = document.getElementById("reps");
-for (let r=1; r<=10; r++){
-    let option = document.createElement("option");
-    option.value = r; option.textContent = r+" 회";
-    repsSelect.appendChild(option);
-}
-
-// 1RM 계산
-function calculate1RM(){
-    const weight = parseFloat(weightSelect.value);
-    const reps = parseInt(repsSelect.value);
-    if(!weight || !reps){ 
-        document.getElementById("result").innerHTML="무게와 반복수를 입력하세요."; 
-        return; 
-    }
-    const oneRM = weight*(1+reps*0.0333);
-    document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
-
-    // 세로 표로 수정
-    let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
-    for(let r=1;r<=10;r++){
-        let rmWeight = oneRM/(1+(r-1)*0.0333);
-        html += `<tr><td>${r}RM</td><td>${rmWeight.toFixed(1)} kg</td></tr>`;
-    }
-    html += `</table>`;
-    document.getElementById("tableArea").innerHTML = html;
-}
-
-
-// Google 로그인
-googleLoginBtn.onclick = () => {
-    const provider = new firebase.auth.GoogleAuthProvider();
-    auth.signInWithPopup(provider)
-        .then(result => console.log("로그인 성공:", result.user))
-        .catch(error => alert("로그인 실패: " + error.message));
-};
-
-// 로그아웃
-logoutBtn.onclick = () => auth.signOut().then(()=>console.log("로그아웃 완료"));
-
-// 로그인 상태 확인
-auth.onAuthStateChanged(user=>{
-    if(user){
-        googleLoginBtn.style.display="none";
-        logoutBtn.style.display="block";
-        saveBtn.style.display="block";
-        save3Btn.style.display="block";
-        userInfo.textContent = `${user.displayName} 님`;
-
-        loadLastRecord();
-        loadLast3Record();
-    }else{
-        googleLoginBtn.style.display="block";
-        logoutBtn.style.display="none";
-        saveBtn.style.display="none";
-        save3Btn.style.display="none";
-        userInfo.textContent="";
-        document.getElementById("saveResult").textContent="";
-        document.getElementById("save3Result").textContent="";
-    }
-});
-
-// 기록 저장 1RM 계산기
-saveBtn.onclick = async ()=>{
-    const user = auth.currentUser;
-    if(!user) return;
-    const weight = weightSelect.value;
-    const reps = repsSelect.value;
-    if(!weight || !reps){ alert("무게와 반복수를 선택하세요!"); return; }
-    try{
-        await db.collection("users").doc(user.uid).set({
-            weight, reps, savedAt:new Date()
-        });
-        document.getElementById("saveResult").textContent="기록 저장 완료!";
-    }catch(error){ console.error(error); alert("저장 실패: "+error.message);}
-};
-
-// 마지막 기록 불러오기 1RM
-async function loadLastRecord(){
-    const user = auth.currentUser;
-    if(!user) return;
-    try{
-        const doc = await db.collection("users").doc(user.uid).get();
-        if(doc.exists){
-            const data = doc.data();
-            document.getElementById("saveResult").textContent=
-                `마지막 기록: ${data.weight}kg / ${data.reps}회`;
-        }
-    }catch(error){ console.error(error);}
-}
-
-// 3대 기록 저장
-save3Btn.onclick = async ()=>{
-    const user = auth.currentUser;
-    if(!user) return;
-    const bench = parseInt(document.getElementById("benchRM").value)||0;
-    const squat = parseInt(document.getElementById("squatRM").value)||0;
-    const dead = parseInt(document.getElementById("deadRM").value)||0;
-    try{
-        await db.collection("users").doc(user.uid).collection("3RM").doc("record").set({
-            bench, squat, dead, savedAt:new Date()
-        });
-        document.getElementById("save3Result").textContent="3대 기록 저장 완료!";
-        updateTotal3();
-    }catch(error){ console.error(error);}
-};
-
-// 마지막 3대 기록 불러오기
-async function loadLast3Record(){
-    const user = auth.currentUser;
-    if(!user) return;
-    try{
-        const doc = await db.collection("users").doc(user.uid).collection("3RM").doc("record").get();
-        if(doc.exists){
-            const data = doc.data();
-            document.getElementById("benchRM").value = data.bench||0;
-            document.getElementById("squatRM").value = data.squat||0;
-            document.getElementById("deadRM").value = data.dead||0;
-            updateTotal3();
-        }
-    }catch(error){ console.error(error);}
-}
-
-// 3대 총합 업데이트
-function updateTotal3(){
-    const bench = parseInt(document.getElementById("benchRM").value)||0;
-    const squat = parseInt(document.getElementById("squatRM").value)||0;
-    const dead = parseInt(document.getElementById("deadRM").value)||0;
-    document.getElementById("total3").textContent = `3대: ${bench+squat+dead} kg`;
-}
-
-// 입력시 총합 자동 업데이트
-document.getElementById("benchRM").addEventListener("input", updateTotal3);
-document.getElementById("squatRM").addEventListener("input", updateTotal3);
-document.getElementById("deadRM").addEventListener("input", updateTotal3);
-
-// 탭 기능
-const tabBtns = document.querySelectorAll(".tabBtn");
-const tabContents = document.querySelectorAll(".tabContent");
-tabBtns.forEach(btn=>{
-    btn.addEventListener("click",()=>{
-        tabBtns.forEach(b=>b.classList.remove("active"));
-        btn.classList.add("active");
-        const target = btn.dataset.target;
-        tabContents.forEach(tc=>{
-            if(tc.id===target) tc.classList.add("active");
-            else tc.classList.remove("active");
-        });
-    });
-});
-
-// 스크롤 시 로그인 숨기기
-window.addEventListener("scroll", ()=>{
-    const loginArea = document.getElementById("loginArea");
-    if(window.scrollY > 50) loginArea.style.display="none";
-    else loginArea.style.display="flex";
-});
-</script>
-
-</body>
-</html>
+      # 4. 배포
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
