--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 
 <div class="container">
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
-    <h2>조현성을 위한 1RM 계산기 + 3대 기록표</h2>
+    <h2> 1RM 계산기</h2>
 
     <!-- 탭 -->
     <div class="tab">
@@ -78,8 +78,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
         <button onclick="calculate1RM()">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
-        <button id="saveBtn" style="display:none;">기록 저장</button>
-        <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
+
     </div>
 
     <!-- 3대 기록표 -->
