--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
         <button onclick="calculate1RM()">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
-
+        <button id="saveBtn" style="display:none;">기록 저장</button>
+        <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
     </div>
 
     <!-- 3대 기록표 -->
