--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@ body {
 .subtitle { font-size:16px; margin-bottom: 20px; }
 
 select, button {
-    font-size:18px;
-    border-radius:10px;
-    border:none;
-    text-align:center;
+    width:100%; padding:14px; margin:10px 0; font-size:18px;
+    border-radius:10px; border:none; text-align:center;
 }
-button { background:white; color:black; font-weight:bold; }
-
+button { font-size:20px; background:white; color:black; font-weight:bold; cursor:pointer; }
 #result { margin-top:20px; font-size:22px; }
 table { width:100%; margin-top:15px; border-collapse: collapse; }
 table, td { border:1px solid white; }
@@ -55,21 +52,22 @@ td { padding:8px; text-align:center; }
 /* 3대 총합 강조 */
 #total3 { font-size:28px; font-weight:bold; margin-bottom:15px; color:#FFD700; }
 
+/* 3대 기록표 개선 */
 table.ThreeRM { margin:auto; width:100%; max-width:380px; }
 table.ThreeRM td { padding:10px; width:33%; }
 input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 
-/* 3대 기록 저장 버튼 스타일 */
-#save3Btn {
-    width: auto;
-    padding: 10px 20px;
-    font-size:16px;
-    background:white;
-    color:black;
-    border-radius:10px;
-    font-weight:bold;
+#save3Btn { 
+    width:100%; 
+    padding:14px; 
+    font-size:18px; 
+    margin-top:10px; 
+    border-radius:10px; 
+    border:none; 
+    background:white; 
+    color:black; 
+    font-weight:bold; 
     cursor:pointer;
-    margin-top:10px;
 }
 </style>
 </head>
@@ -92,7 +90,8 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
         <button onclick="calculate1RM()">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
-        <!-- 1RM 기록 저장 버튼 제거 -->
+        <!-- 1RM 기록 저장 버튼 제거됨 -->
+        <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
     </div>
 
     <!-- 3대 기록표 -->
@@ -110,7 +109,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
                 <td><input type="number" id="deadRM" class="rmInput" placeholder="kg" min="0"></td>
             </tr>
         </table>
-        <button id="save3Btn">3대 기록 저장</button>
+        <button id="save3Btn" style="display:none;">3대 기록 저장</button>
         <div id="save3Result" style="margin-top:10px; font-size:16px;"></div>
     </div>
 </div>
@@ -127,7 +126,6 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
 <script>
-// Firebase 설정
 const firebaseConfig = {
     apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
     authDomain: "rmpj-7ca13.firebaseapp.com",
@@ -199,6 +197,7 @@ auth.onAuthStateChanged(user=>{
         logoutBtn.style.display="block";
         save3Btn.style.display="block";
         userInfo.textContent = `${user.displayName} 님`;
+
         loadLast3Record();
     }else{
         googleLoginBtn.style.display="block";
