--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 #recordFolders {
     display:flex; 
     justify-content:space-between; 
-    margin-top:10px; 
+    margin-top:20px; 
     width:100%; 
     max-width:380px; 
     margin:auto;
@@ -92,7 +92,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
     border:1px solid white; 
     padding:10px; 
     color:black; 
-    background:white; 
+    background:888888; 
     max-width:380px; 
     margin:auto;
 }
